fix: different approach to handling configure modal overflow

--- a/src/generic/configure-modal/ConfigureModal.scss
+++ b/src/generic/configure-modal/ConfigureModal.scss
@@ -4,10 +4,6 @@
     position: static;
   }
 
-  .configure-modal__body {
-    background-color: var(--pgn-color-white);
-  }
-
   .react-datepicker-popper {
     z-index: 10;
   }
